@@ -4,3 +4,5 @@ Makefile
 Makefile.in
 *.lo
 *.la
+compiz.schemas
+compiz.schemas.in
